--- a/src/css/ToolbarButtons.less
+++ b/src/css/ToolbarButtons.less
@@ -6,10 +6,10 @@
     right:0;
     font-size: 16pt;
     line-height: unit(2*@CornerRadius, px);
-    width: unit(2*@CornerRadius, px);
+    width: auto; //unit(2*@CornerRadius, px);
     height: unit(2*@CornerRadius, px);
     border-bottom-left-radius: 5px;
     border-top-right-radius: unit(@CornerRadius, px); 
-    text-align: center;
+    text-align: right;
     vertical-align: middle;
 }
