--- a/hswidget.css
+++ b/hswidget.css
@@ -266,11 +266,11 @@
   right: 0;
   font-size: 16pt;
   line-height: 20px;
-  width: 20px;
+  width: auto;
   height: 20px;
   border-bottom-left-radius: 5px;
   border-top-right-radius: 10px;
-  text-align: center;
+  text-align: right;
   vertical-align: middle;
 }
 .hs-modal-background {
@@ -353,4 +353,4 @@
 .hs-typeahead-list div:hover {
   text-shadow: 0 0 3px #88f;
 }
-/*# sourceMappingURL=hswidget.css.map */
+/*# sourceMappingURL=_dist/bin/hsWidget.css.map */
