added sliders and labels

--- a/src/css/hsWidget.less
+++ b/src/css/hsWidget.less
@@ -6,3 +6,5 @@
 @import "Modal.less"; 
 @import "AddRemoveButtons.less"; 
 @import "TypeAhead.less"; 
+@import "Label.less"; 
+@import "Slider.less"; 
