--- a/src/css/Slider.less
+++ b/src/css/Slider.less
@@ -1,9 +1,11 @@
+
 .hs-slider {
     display:block;
     position: relative;
     margin: 0;
     padding: 0;
     width: 100%;
+    height: 40px;
     .hs-slider-slot {
         position: absolute;
         height: 10px;
@@ -11,6 +13,9 @@
         right:  10px;
         margin-top:    10px;
         margin-bottom: 20px;
+        background-color: #eee;
+        border: 1px solid #ccc;
+        border-radius: 5px;
         .hs-slider-markers {
             position: absolute;
             top:  0;
@@ -23,6 +28,7 @@
                 top: 10px;
                 border: 1px solid #aaa;
                 .hs-slider-label {
+                    font-size: 10px;
                     margin-top: 5px;
                     position: absolute;
                     text-align: center;
@@ -30,19 +36,15 @@
                 }
             }
         }
+        .hs-slider-handle {
+            top: 5px;
+            position: absolute;
+            border: 1px solid #aaa;
+            border-radius: 10px;
+            height: 20px;
+            width: 20px;
+            transform: translate(-50%, -50%);
+            background-color: #88f;
+        }
     }
-}
-
-.hs-slider-slot.hs-simple-slider-slot {
-    background-color: #eee;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.hs-slider-marker.hs-simple-slider-marker {
-    border: 1px solid #f88;
-}
-
-.hs-slider-label.hs-simple-slider-label {
-    font-size: 10px;
 }
