--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -62,11 +62,12 @@
     overflow: hidden;
     height:0%;
     max-height:0%;
+    transition: max-height 0.5s ease-in-out;
 }
 
 .hs-collapsible-expanded .hs-collapsible-content {
     height:auto;
     max-height:100%;
-    transition: all 0.3s ease-in-out;
+//    transition: height 0.5s ease-in-out;
 }
 
