--- a/src/css/Slider.less
+++ b/src/css/Slider.less
@@ -1,3 +1,4 @@
+@slider_handle_size: 10;
 
 .hs-slider {
     display:block;
@@ -40,9 +41,9 @@
             top: 5px;
             position: absolute;
             border: 1px solid #aaa;
-            border-radius: 10px;
-            height: 20px;
-            width: 20px;
+            border-radius: unit(@slider_handle_size, px);
+            height: unit(2*@slider_handle_size, px);
+            width: unit(2*@slider_handle_size, px);
             transform: translate(-50%, -50%);
             background-color: #88f;
         }
