added tests, moved class states to node.state

--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -62,12 +62,11 @@
     overflow: hidden;
     height:0%;
     max-height:0%;
-    transition: max-height 0.5s ease-in-out;
+    transition: height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 }
 
-.hs-collapsible-expanded .hs-collapsible-content {
+.hs-collapsible-expanded.hs-collapsible-content {
     height:auto;
     max-height:100%;
-//    transition: height 0.5s ease-in-out;
 }
 
