--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -13,11 +13,13 @@
     border-top: @ArrowLegs;
     border-bottom: @ArrowLegs;
     padding-right: 3px;
+    top: unit(unit(@ArrowSize)/2, px);
 }
 
 .hs-collapsible-arrow-down {
     .hs-collapsible-arrow-right;
     transform: rotate(90deg);
+    top: unit(unit(@ArrowSize), px);
 }
 
 .hs-collapsible-arrow-up {
@@ -35,12 +37,15 @@
 }
 
 .hs-collapsible-title {
-    div { display: inline-block; }
+    div { 
+        display: inline-block; 
+        padding-left: 5px;
+    }
     div.hs-collapsible-pre {
+        padding-left: 0px;
         position: absolute;
         margin-right: auto;
         left:3px;
-        top: unit(unit(@ArrowSize)/2, px);
 
         & + div { // start the following title div after a margin
             margin-left: unit(unit(@ArrowSize)+6, px);
@@ -48,6 +53,7 @@
     }
 
     div.hs-collapsible-post {
+        padding-left: 0px;
         position: absolute;
         margin-left: auto;
         right:3px;
