fixed EditList and EditLabel defaults

--- a/src/css/EditLabel.less
+++ b/src/css/EditLabel.less
@@ -3,16 +3,16 @@
     padding-top: 0px;
     padding-left: 7px;
     line-height: 1.5em;
-    border: 0;  //3px solid rgba(0,0,0,0);
+    border: 0;  
     border-top-width: 2px;
     input& {
         border:0;
         font-family: inherit;
         font-size: inherit;
-        width:100%;
     }
     &.default {
         color: #aaa;
         font-style: italic;
+        width: 100px;
     }
 }
