--- a/src/css/EditList.less
+++ b/src/css/EditList.less
@@ -15,4 +15,5 @@ div.hsedit_list_header {
 .hsedit_list_row {
     height: @rowHeight;
     overflow-x: hidden;
+    & .hs-layout { overflow-x: hidden;}
 }
