fixed TypeAhead docs

--- a/src/css/TypeAhead.less
+++ b/src/css/TypeAhead.less
@@ -23,6 +23,7 @@
 
 .hs-typeahead-list {
     position: absolute;
+    overflow-x: visible;
     z-index: 9999;
     left: 20px;
     width: 200px;
@@ -34,5 +35,8 @@
         &:hover {
             text-shadow: 0 0 3px #88f;
         }
+    }
+    & span {
+        overflow-x: visible;
     }
 }
