--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -71,6 +71,7 @@
 }
 
 .hs-collapsible-expanded.hs-collapsible-content {
+    transition: height 0.5s ease-in-out, max-height 0.5s ease-in-out;
     height:auto;
     max-height:100%;
 }
