--- a/src/css/EditTextarea.less
+++ b/src/css/EditTextarea.less
@@ -1,6 +1,17 @@
 .hsedit_textarea {
+    border: none;
+    font: inherit;
     padding-top: 0px;
     padding-left: 7px;
     line-height: 1.5em;
     width: 100%;
+    & p {
+        margin: 0;
+        height: 1.5em;
+    }
+    &.default {
+        color: #aaa;
+        font-style: italic;
+        width: 100px;
+    }
 }
