added 'Escape' key to close type-aheads

--- a/src/css/TypeAhead.less
+++ b/src/css/TypeAhead.less
@@ -4,10 +4,11 @@
 }
 
 .hs-typeahead-input {
-    position: relative;
-    left: 5px;
-    right: 5px;
-    top: 0;
+    // position: relative;
+    // left: 5px;
+    // right: 5px;
+    // top: 0;
+    width:100%;
     box-shadow: 0 0 5px 0px #ccc;
     border: 1px solid #ccf;
     border-radius: 4px;
