--- a/src/css/hsWidget.less
+++ b/src/css/hsWidget.less
@@ -4,6 +4,7 @@
 @import "Button.less"; 
 @import "ToolbarButtons.less"; 
 @import "Modal.less"; 
+@import "Popup.less"; 
 @import "TypeAhead.less"; 
 @import "Label.less"; 
 @import "Slider.less"; 
