--- a/src/css/EditLabel.less
+++ b/src/css/EditLabel.less
@@ -3,6 +3,8 @@
     padding-top: 0px;
     padding-left: 7px;
     line-height: 1.5em;
+    display: inline-block;
+    width: 100%;
     border: 0;  
     border-top-width: 2px;
     input& {
@@ -13,6 +15,6 @@
     &.default {
         color: #aaa;
         font-style: italic;
-        width: 100px;
+        // width: 100px;
     }
 }
