added Popup and showdown

--- a/src/css/EditTextarea.less
+++ b/src/css/EditTextarea.less
@@ -14,4 +14,11 @@
         font-style: italic;
         width: 100px;
     }
+
+    // some showdown formatting
+    &>ul {
+        margin: 0;
+        padding-left: 10px;
+    }
 }
+
