--- a/src/css/Popup.less
+++ b/src/css/Popup.less
@@ -1,6 +1,6 @@
 .hs_popup {
     position: fixed;
-    padding: 10px;
+    padding: 3px 5px;
     z-index: 999;
     transform: translate(0, -50%);
     background-color:#eee;
