--- a/src/css/Popup.less
+++ b/src/css/Popup.less
@@ -2,9 +2,9 @@
     position: fixed;
     padding: 3px 5px;
     z-index: 999;
-    transform: translate(0, -50%);
     background-color:#eee;
     border-radius: 5px; 
+    border: 1px solid #aaf;
     width: auto;
     height: auto;
     font-size: 14px;
