--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -61,18 +61,8 @@
     }
 }
 
-
 .hs-collapsible-content {
     position: relative;
     overflow: hidden;
-    height:0%;
-    max-height:0%;
-    transition: height 0.5s ease-in-out, max-height 0.5s ease-in-out;
+    transition: max-height 0.25s ease-in-out;
 }
-
-.hs-collapsible-expanded.hs-collapsible-content {
-    transition: height 0.5s ease-in-out, max-height 0.5s ease-in-out;
-    height:auto;
-    max-height:100%;
-}
-
