--- a/src/css/Selector.less
+++ b/src/css/Selector.less
@@ -6,6 +6,7 @@
     height:100%;
     border-left: 0.5px solid #ccc;
     border-right: 0.5px solid #ccc;
+    white-space: nowrap;
     &.hs-selected {
     }
 }
