--- a/src/css/Collapsible.less
+++ b/src/css/Collapsible.less
@@ -1,6 +1,11 @@
 @ArrowSize: 6px;
 @ArrowLegs: unit(unit(@ArrowSize)-1, px) solid transparent;
 @ArrowHypothenuse: @ArrowSize solid #666;
+
+.scrolly {
+    overflow-y: scroll;
+}
+
 .hs-collapsible-arrow {
     width: 0; 
     height: 0; 
@@ -63,6 +68,5 @@
 
 .hs-collapsible-content {
     position: relative;
-    overflow: hidden;
-    transition: max-height 0.25s ease-in-out;
+    overflow-x: hidden;
 }
