added hideModal attr

--- a/src/css/Modal.less
+++ b/src/css/Modal.less
@@ -2,10 +2,10 @@
 @ModalBackground: rgba(@ModalBgColor, @ModalBgColor, @ModalBgColor, 0.6);
 @ModalRadius:    10;
 
-.hs-modal-frame {
+.hs_modal_frame {
 }
 
-.hs-modal-background {
+.hs_modal_background {
     position: fixed;
     left:0%;
     right:0%;
@@ -15,7 +15,7 @@
     z-index: 998;
 }
 
-.hs-modal-foreground {
+.hs_modal_foreground {
     position: fixed;
     top: 50%;
     left: 50%;
