--- a/src/css/DropOver.less
+++ b/src/css/DropOver.less
@@ -1,15 +1,15 @@
 
-.hs-dropover {
+.hs_dropover {
     position: relative;
 }
 
-.hs-dropover-content {
+.hs_dropover_content {
     left: 5px;
     position: relative;
     transition: all 0.3s ease-in-out;
     overflow: hidden;
     max-height:0%;
-    &.hs-dropover-expanded {
+    &.hs_dropover_expanded {
         max-height:100%;
     }
 }
