--- a/src/css/TypeAhead.less
+++ b/src/css/TypeAhead.less
@@ -1,9 +1,9 @@
 
-.hs-form {
+.hs_form {
     position: relative;
 }
 
-.hs-typeahead-input {
+.hs_typeahead_input {
     // position: relative;
     // left: 5px;
     // right: 5px;
@@ -14,15 +14,15 @@
     border-radius: 4px;
     padding: 4px;    
     font-size: 16px;
-    &.hs-typeahead-value {
+    &.hs_typeahead_value {
         color:#66f;
     }
-    &.hs-typeahead-placeholder {
+    &.hs_typeahead_placeholder {
         color: #ccc;
     }
 }
 
-.hs-typeahead-list {
+.hs_typeahead_list {
     position: absolute;
     overflow-x: visible;
     z-index: 9999;
