--- a/src/css/Slider.less
+++ b/src/css/Slider.less
@@ -1,13 +1,13 @@
 @slider_handle_size: 10;
 
-.hs-slider {
+.hs_slider {
     display: block;
     position: relative;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 40px;
-    .hs-slider-slot {
+    .hs_slider_slot {
         position: absolute;
         height: 10px;
         left:   10px;
@@ -17,18 +17,18 @@
         background-color: #eee;
         border: 1px solid #ccc;
         border-radius: 5px;
-        .hs-slider-markers {
+        .hs_slider_markers {
             position: absolute;
             top:  0;
             left: 0px;
             right: 2px;
-            .hs-slider-marker {
+            .hs_slider_marker {
                 position: absolute;
                 height: 5px;
                 width:  0px;
                 top: 10px;
                 border: 1px solid #aaa;
-                .hs-slider-label {
+                .hs_slider_label {
                     font-size: 10px;
                     margin-top: 5px;
                     position: absolute;
@@ -37,7 +37,7 @@
                 }
             }
         }
-        .hs-slider-handle {
+        .hs_slider_handle {
             top: 5px;
             position: absolute;
             border: 1px solid #aaa;
