--- a/src/css/hsWidget.less
+++ b/src/css/hsWidget.less
@@ -1,3 +1,10 @@
+
+.hs_right   { text-align:right; }
+.hs_center  { text-align: center; }
+.hs_nowrap  { white-space: nowrap; }
+.hs_scrolly { overflow-y: scroll; }
+
+
 @import "Menus.less";
 @import "Collapsible.less"; 
 @import "DropOver.less"; 
