--- a/src/css/Menus.less
+++ b/src/css/Menus.less
@@ -19,4 +19,11 @@
     }
 }
 
-
+// .hs_menu_panel {
+//     .hs_menu {
+//         height: 30px;
+//     }
+//     .hs_menu_content {
+//         height: inherit;        
+//     }
+// }
