--- a/src/css/hsWidget.less
+++ b/src/css/hsWidget.less
@@ -2,7 +2,7 @@
 .hs_right   { text-align:right; }
 .hs_center  { text-align: center; }
 .hs_nowrap  { white-space: nowrap; }
-.hs_scrolly { overflow-y: scroll; }
+.hs_scrolly { overflow-x: hidden; overflow-y: scroll; }
 
 
 @import "Menus.less";
