--- a/src/css/Grid.less
+++ b/src/css/Grid.less
@@ -3,8 +3,14 @@
     display:grid; 
     box-sizing: border-box;
     place-items: stretch;
-    &.hs_grid_col { width:  100vw; grid-auto-flow: column; }
-    &.hs_grid_row { height: 100vh; grid-auto-flow: row; }    
+    &.hs_grid_col { 
+        // width:  100vw; 
+        grid-auto-flow: column; 
+    }
+    &.hs_grid_row { 
+        // height: 100vh; 
+        grid-auto-flow: row; 
+    }    
 }
 
 .hs_grid_auto_col {
