added State, refactored buttons

--- a/src/css/Button.less
+++ b/src/css/Button.less
@@ -33,11 +33,15 @@
         filter: brightness(95%);
     }
     &.hs_pressed {
-        filter: brightness(105%);
+        filter: brightness(80%);
     }
     span {
         vertical-align: middle;
     }
+}
+
+.hs_disabled {
+    filter: grayscale(1) contrast(50%) brightness(120%);
 }
 
 .hs_onoff_button {
