--- a/src/css/EditLabel.less
+++ b/src/css/EditLabel.less
@@ -9,8 +9,10 @@
     border-top-width: 2px;
     input& {
         border:0;
+        margin:0;
         font-family: inherit;
         font-size: inherit;
+        padding-bottom:8px;
     }
     &.default {
         color: #aaa;
