--- a/src/css/EditLabel.less
+++ b/src/css/EditLabel.less
@@ -1,18 +1,20 @@
 
 .hsedit_label {
-    padding-top: 0px;
-    padding-left: 7px;
+    padding: 0 0 0 7px;
     line-height: 1.5em;
     display: inline-block;
     width: 100%;
     border: 0;  
     border-top-width: 2px;
     input& {
+        width: 80%;
         border:0;
         margin:0;
+        padding-top:0;
+        padding-bottom:0;
         font-family: inherit;
         font-size: inherit;
-        padding-bottom:8px;
+        padding-top:5px;
     }
     &.default {
         color: #aaa;
