Label and List debugging

--- a/src/css/Popup.less
+++ b/src/css/Popup.less
@@ -8,5 +8,11 @@
     width: auto;
     height: auto;
     font-size: 14px;
+    &.idle {
+        border: none;
+        width: 0;
+        height: 0;
+        top: -100px;
+    }
 }
 
